# fast-translate

./: MANIFEST.in  README.md  pyproject.toml
artifacts/: gsm8k_translation_errors.json  gsm8k_translation_metrics.json  gsm8k_translation_report.md  manual_structured_review.md  metrics_structured_hardening.json  metrics_structured_hardening_large.json  metrics_structured_hardening_requested_datasets.json  metrics_structured_hardening_requested_datasets_large.json  metrics_structured_hardening_requested_datasets_large_v2.json  metrics_structured_hardening_requested_datasets_large_v3.json  metrics_structured_hardening_requested_datasets_large_v6.json  metrics_structured_hardening_requested_datasets_large_v7.json  metrics_structured_hardening_requested_datasets_v4.json  metrics_structured_hardening_xlarge.json  structured_failures_debug.json  structured_failures_debug_v2.json  structured_failures_debug_v4.json  structured_failures_pt_v4.json  structured_failures_pt_v5.json  validation_c1_conversations_structure_full.json  validation_gsm8k_full.json  validation_gsm8k_full_second_pass.json  validation_gsm8k_full_sourceaware.json  validation_gsm8k_full_sourceaware_directqa.json  validation_gsm8k_full_sourceaware_directqa_v2.json
scripts/: evaluate_structured_hardening.py  fetch_translatelocally_binary.py  translate_gsm8k_errors.py
src/fast_translate/: __init__.py  (+4 more)
tests/: test_comprehensive_edge_cases.py  test_comprehensive_postprocess.py  test_import_alias.py  test_postprocess.py  test_resources.py  test_runtime_helpers.py  test_structure.py  test_structured_use_cases.py
(+3 files in other folders)
