[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-translate"
version = "0.1.13"
description = "Portable EN<->PT-BR translation library with baked-in models and PT-BR postprocessing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "TL PTBR Contributors"}
]
keywords = ["translation", "portuguese", "pt-br", "offline", "translatelocally"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = [
  "httpx>=0.27.0",
  "zstandard>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/cnmoro/fast-translate"
Repository = "https://github.com/cnmoro/fast-translate"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
